@@ -1,3 +1,11 @@
+2008-09-26  Jonathan Tai  <jon@tgpsolutions.com>
+
+	* strongwind/accessibles.py: Add default action logging to typeText,
+	  keyCombo, and mouseClick. (#553294, Brian G. Merrell)
+
+	* examples/gcalctool-bug-488226.py: Remove redundant logging in the
+	  test script now that the logging is done in the accessible.
+
 2008-08-14  Jonathan Tai  <jon@tgpsolutions.com>
 
 	* strongwind/accessibles.py: Bind FontChooser dialog; add logging to
